# conf-engine

./: .gitignore  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
conf_engine/: configuration.py  options.py
conf_engine/core/tests/: test_types.py
conf_engine/parsers/: cli.py
conf_engine/parsers/tests/: test_cli.py
conf_engine/tests/: test_config.py
conf_engine/tests/test_ini_files/: test.ini
conf_engine/tests/test_ini_files/types/: booleans.ini  numbers.ini  strings.ini
config_engine/: __init__.py  configuration.py  options.py  types.py
config_engine/parsers/: __init__.py  env.py  ini_file.py
config_engine/parsers/tests/: test_env.py  test_ini_file.py
config_engine/tests/: conftest.py  test_config.py  test_options.py  test_types.py
docs/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/.doctrees/: environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/.doctrees/autoapi/: index.doctree
docs/.doctrees/autoapi/conf_engine/: index.doctree
docs/.doctrees/autoapi/exceptions/: index.doctree
docs/_sources/: installation.rst.txt
docs/_sources/autoapi/: index.rst.txt
docs/autoapi/: index.html
docs/autoapi/conf_engine/: index.html
docs/autoapi/exceptions/: index.html
docs/autoapi/test_types/: index.html
docs/autoapi/types/: index.html
docs/src/: conf.py  index.rst  installation.rst  usage.rst
docs/src/examples/: caching.py  groups.py  namespaces.py  register.py
(+51 files in other folders)
